# ratioAndScheduleBot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  config.py  database.py  docker-compose.yml  handlers.py  main.py  opencode.jsonc  pyproject.toml  render.yaml  requierments.txt  requirements.txt  scheduler.py  setup.sh
.cursor/rules/: project-context.mdc
.github/workflows/: ci.yml
docs/: runbook.md
tests/: test_database.py
