[project]
name = "ratio-schedule-bot"
version = "0.1.0"
description = "Russian-language Telegram bot for maintaining daily routines"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "ASYNC", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_generics = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
